manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "afrozaks-4dc0"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "afrozaks-4dc0"
    spec:
      containers:
        - name: "afrozaks-4dc0"
          image: "afrozcrs.azurecr.io/afrozaks"
          ports:
          - containerPort: 8080
