manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "afrozaks-4dc0"
    labels:
        app: "afrozaks-4dc0"
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "afrozaks-4dc0"
