manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "akscluster-41e7"
    labels:
        app: "akscluster-41e7"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "akscluster-41e7"
